--- a/Reading73117.html
+++ b/Reading73117.html
@@ -1,64 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content="text/html; charset=utf-8" http-equiv="content-type">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Mebop : ">
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-    <title>Mebop</title>
-  </head>
-  <body>
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-      <header class="inner">
-        <h1 id="project_title">MeBOP</h1>
-      </header>
-    </div>
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <title>Reading728</title>
-        <p>Reading material:</p>
-        <h3>
-          <p><b><em>Monday July 31:</em></b></p>
-        </h3>
-        <strong></strong><strong><strong><strong>Dominique Soldati-Favre:<br>
-          <br>
-        </strong><br>
-          Omar Harb:<br>
-          <br>
-        </strong><a target="_blank" href="https://mebop.github.io/MeBOP/pdfs/Harb/bok%253A978-1-4939-1438-8.pdf">Chapter
-          I: The Eukaryotic Pathogen Databases: A Functional Genomic Resource
-          Integrating Data from Human and Veterinary Parasites</a><strong><br>
-        </strong><a target="_blank" href="https://mebop.github.io/MeBOP/pdfs/Harb/Nucl.%20Acids%20Res.-2013-Aurrecoechea-D684-91.pdf"><br>
-          EuPathDB: The Eukaryotic Pathogen database</a><strong><br>
-          <br>
-          Exercises:<br>
-          <br>
-        </strong><a href="https://mebop.github.io/MeBOP/pdfs/Harb/MeBOP_Exercise1.pdf">Finding
-          Genes</a><br>
-        <br>
-        <a href="https://mebop.github.io/MeBOP/pdfs/Harb/MebopOrthology2.pdf">Orthology</a><br>
-        <br>
-        <a href="https://mebop.github.io/MeBOP/pdfs/Harb/MeBOP_Browser_Exercise3.pdf">Functional
-          data/Genome Browser</a><strong><br>
-          <br>
-          Useful links:<br>
-          <br>
-        </strong><a href="http://workshop.eupathdb.org">Workshops from EuPathDB</a><strong><br>
-          <br>
-        </strong><a href="https://usegalaxy.org/">Galaxy Project</a><strong></strong><br>
-        <strong> </strong> </section>
-        <strong> </strong> </section>
-    </div>
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner"> <a href="/MeBOP" title="Back to the Home page"><b>HOME</b></a>
-        | <a href="#" title="To the top of this page"><b>BACK TO TOP</b></a>
-        <p class="copyright">Mebop maintained by <a href="https://github.com/MeBOP">MeBOP</a></p>
-        <p> </p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html>  <head>    <meta content="text/html; charset=utf-8" http-equiv="content-type">    <meta http-equiv="X-UA-Compatible" content="chrome=1">    <meta name="description" content="Mebop : ">    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">    <title>Mebop</title>  </head>  <body>    <!-- HEADER -->    <div id="header_wrap" class="outer">      <header class="inner">        <h1 id="project_title">MeBOP</h1>      </header>    </div>    <!-- MAIN CONTENT -->    <div id="main_content_wrap" class="outer">      <section id="main_content" class="inner">        <title>Reading728</title>        <p>Reading material:</p>        <h3>          <p><b><em>Monday July 31:</em></b></p>        </h3>        <strong></strong><strong><strong><strong>Dominique Soldati-Favre:<br>              <br>            </strong><br>            Omar Harb:<br>            <br>          </strong><a target="_blank" href="https://mebop.github.io/MeBOP17/pdfs/Harb/bok%253A978-1-4939-1438-8.pdf">Chapter
+            I: The Eukaryotic Pathogen Databases: A Functional Genomic Resource            Integrating Data from Human and Veterinary Parasites</a><strong><br>          </strong><a target="_blank" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5210576/"><br>            EuPathDB: The Eukaryotic Pathogen database</a><strong><br>          </strong><br>          <strong> </strong> </strong></section>      <strong> <strong> </strong> </strong></div>    <strong>      <!-- FOOTER  -->      <div id="footer_wrap" class="outer">        <footer class="inner"> <a href="/MeBOP" title="Back to the Home page"><b>HOME</b></a>          | <a href="#" title="To the top of this page"><b>BACK TO TOP</b></a>          <p class="copyright">Mebop maintained by <a href="https://github.com/MeBOP">MeBOP</a></p>          <p> </p>          <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>        </footer>      </div>    </strong>  </body></html>
