--- a/students17.html
+++ b/students17.html
@@ -1,42 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content="text/html; charset=utf-8" http-equiv="content-type">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Mebop : ">
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-    <title>Mebop</title>
-  </head>
-  <body>
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-      <header class="inner">
-        <h1 id="project_title">MeBOP</h1>
-        <h2 id="project_tagline"></h2>
-      </header>
-    </div>
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <title>students</title>
-        <h3>
-          <p><b>Meet the students<em><br>
-              </em></b></p>
-        </h3>
-        <strong><img alt="students" src="images/filename.png"></strong><strong></strong><br>
-        <strong> </strong>
-        <div style="text-align: justify;">
-          <hr><strong></strong><strong> </strong></div>
-      </section>
-    </div>
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner"> <a href="/MeBOP" title="Back to the Home page"><b>HOME</b></a>
-        | <a href="#" title="To the top of this page"><b>BACK TO TOP</b></a>
-        <p class="copyright">Mebop maintained by <a href="https://github.com/MeBOP">MeBOP</a></p>
-        <p> </p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html>  <head>    <meta content="text/html; charset=utf-8" http-equiv="content-type">    <meta http-equiv="X-UA-Compatible" content="chrome=1">    <meta name="description" content="Mebop : ">    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">    <title>Mebop</title>  </head>  <body>    <!-- HEADER -->    <div id="header_wrap" class="outer">      <header class="inner">        <h1 id="project_title">MeBOP</h1>        <h2 id="project_tagline"></h2>      </header>    </div>    <!-- MAIN CONTENT -->    <div id="main_content_wrap" class="outer">      <section id="main_content" class="inner">        <title>students</title>        <h3>          <p><b>Meet the students<em><br>              </em></b></p>        </h3>        <i><strong>Stay Tuned</strong></i><br>        <strong> </strong>        <div style="text-align: justify;">          <hr><strong></strong><strong> </strong></div>      </section>    </div>    <!-- FOOTER  -->    <div id="footer_wrap" class="outer">      <footer class="inner"> <a href="/MeBOP17" title="Back to the Home page"><b>HOME</b></a>        | <a href="#" title="To the top of this page"><b>BACK TO TOP</b></a>        <p class="copyright">Mebop maintained by <a href="https://github.com/MeBOP">MeBOP</a></p>        <p> </p>        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>      </footer>    </div>  </body></html>
